# library_api

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lib_api/: crud.py  db.py  main.py  models.py  schemas.py
lib_api/routers/: books.py  users.py
