[tool.poetry]
name = "library-api"
version = "0.1.0"
description = ""
authors = ["Artur H. Lange <artur@arc2.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.32"}
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
